[project]
name = "cat_dashboard"
version = "0.1.0"
description = "Dashboard to show AI app improvements"
authors = [
    { name="Paul Zabelin", email="paulzabelin@artium.ai" },
    { name="Ian McFarland", email="ian@neo.com"}
]
dependencies = ["flask"]
requires-python = ">=3.13"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
